<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/navigation_item_nowPlayingMovies"
        android:title="@string/nowPlayingMovies"
        android:icon="@drawable/ic_local_movies_white_24dp"
        />
    <item
        android:id="@+id/navigation_item_popularMovies"
        android:title="@string/popularMovies"
        android:icon="@drawable/ic_trending_up_white_24dp"

        />
    <item
        android:id="@+id/navigation_item_topRatedMovies"
        android:title="@string/topRatedMovies"
        android:icon="@drawable/ic_star_half_white_24dp"

        />
    <item
        android:id="@+id/navigation_item_upComingMovies"
        android:title="@string/upComingMovies"
        android:icon="@drawable/ic_date_range_white_24dp"
    />
    <item
        android:id="@+id/navigation_item_favouriteMovies"
        android:title="@string/watchlist"
        android:icon="@drawable/ic_format_list_bulleted_white_24dp"
    />
</group>
    <item
        android:title="Other">
        <menu>
            <item
                android:id="@+id/navigation_item_setting"
                android:title="@string/setting"
                android:icon="@drawable/ic_settings_white_24dp"
                />
            <item
                android:id="@+id/navigation_item_share_app"
                android:title="@string/share_app"
                android:icon="@drawable/ic_share_white_24dp"
                />
            <item
                android:id="@+id/navigation_item_rate_app"
                android:title="@string/rate_app"
                android:icon="@drawable/ic_star_border_black_24dp"
                />
            <item
                android:id="@+id/navigation_item_about"
                android:title="@string/about"
                android:icon="@drawable/ic_info_outline_white_24dp"
                />
        </menu>
    </item>
</menu>