<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_search_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_sort_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_genre"
        android:title="@string/menu_genre_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_date_select"
        android:title="@string/menu_date_intervals_title"

        app:showAsAction="never" />

</menu>

    <!--app:defaultQueryHint="......."
        app:queryHint="........."-->