<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/wrong_way"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:padding="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/invalid_fragment_title"
            android:textStyle="italic"
            android:textSize="@dimen/invalid_date_ops_text_font_size"
            android:textColor="@android:color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invalid_fragment_note_one"
            android:textStyle="italic"
            android:gravity="center"
            android:textSize="@dimen/invalid_date_details_font_size"
            android:textColor="@android:color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/invalid_fragment_note_two"
            android:textStyle="italic"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            />
            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/invalid_date_layout_button_title"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:gravity="center"
                android:background="@drawable/my_button_bg"
                android:id="@+id/invalid_fragment_button_reselect_date"
                />
    </LinearLayout>
</RelativeLayout>