<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    >


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/no_internet"
        android:scaleType="fitXY"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/message_oh_no"
        android:textSize="@dimen/message_oh_no"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        />
    <TextView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/message_no_internet"
        android:textSize="@dimen/message_no_internet"
        android:textColor="@android:color/white"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/try_again_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:id="@+id/no_internet_fragment_button_retry"
        android:background="@drawable/my_button_bg"
        />
</LinearLayout>
</RelativeLayout>