<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.info.movies.fargments.SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"

        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_show_movie_rate"
                android:textColor="@android:color/white"
                android:textSize="@dimen/setting_title" />

            <TextView
                android:id="@+id/setting_average_rate_current_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/setting_movie_rate_hidden"
                android:textColor="@android:color/white"
                android:textSize="@dimen/setting_content" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/setting_average_rate_on_poster_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"
            android:theme="@style/checkBoxStyle" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/setting_upcoming_notification_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_upcoming_notification_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/setting_title"

                />

            <TextView
                android:id="@+id/setting_daily_notification_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/setting_upcoming_notification_content_off"
                android:textSize="@dimen/setting_content"
                android:textColor="@android:color/white"
                />
        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/setting_upcoming_notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"
            android:theme="@style/Switch" />
        <!--app:trackTint="@color/cardview_dark_background"-->

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@android:color/darker_gray"
        />
</LinearLayout>
