<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.info.movies.fargments.AboutFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/about_fragment_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome to "
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/about_fragment_text_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="17dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/about_fragment_text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/about_content_one"
            android:textColor="@android:color/white"
            android:textSize="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >

            <TextView
                android:id="@+id/about_fragment_text_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="If you like InfoMovies"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp">

                <LinearLayout
                    android:id="@+id/about_fragment_share_app"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_fragment_text_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="Share app with friends"
                        android:textColor="@android:color/white"
                        android:textSize="15dp"
                        android:lines="2"
                        android:gravity="center"
                        />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_share_white_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/about_fragment_rate_app"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_fragment_text_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="Rate app"
                        android:textColor="@android:color/white"
                        android:textSize="15dp"
                        android:lines="2"
                        android:gravity="center"
                        />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:src="@drawable/star_" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_fragment_text_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content_two"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/tmdp_attribution" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/about_fragment_thanks_layout"
                >

                <TextView
                    android:id="@+id/about_fragment_text_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Special thank to Jan Vašek "
                    android:textColor="@android:color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/about_fragment_text_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="(jeshoots.com)"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="15dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/about_fragment_text_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Who provided us the welcome screen image."
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="20dp"

                />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
